Moved monitor and wallpaper config to external files to make script more portable

--- a/sway/config
+++ b/sway/config
@@ -14,76 +14,11 @@ set $term alacritty
 set $browser librewolf
 set $files nemo
 
-# wallpapers
-set $mainwall /home/johannes/Files/Pictures/walls/csgo/Gamma-Doppler.png
-set $leftwall /home/johannes/Files/Pictures/walls/csgo/M4A1-S-Nightmare.png
-set $rightwall /home/johannes/Files/Pictures/walls/csgo/PARACORD-CRIMSON.png
-set $topwall /home/johannes/Files/Pictures/walls/csgo/deagle-code-red.png
-
 # Your preferred application launcher
 # Note: pass the final command to swaymsg so that the resulting window can be opened
 # on the original workspace that the command was run on.
 # set $menu dmenu_path | dmenu | xargs swaymsg exec --
 set $menu eval "dmenu_run $DMENU_COLORS -p 'dmenu'"
-
-### Output configuration
-#
-# Default wallpaper (more resolutions are available in /usr/share/backgrounds/sway/)
-# Main
-output DP-1 bg $mainwall fill
-# Left
-output DP-3 bg $leftwall fill
-# Right
-output DP-2 bg $rightwall fill
-# Top
-output HDMI-A-1 bg $topwall fill
-
-output * bg /home/johannes/Files/Pictures/walls/etc/insight.jpg fill
-
-#
-# Example configuration:
-#
-#   output HDMI-A-1 resolution 1920x1080 position 1920,0
-#
-# You can get the names of your outputs by running: swaymsg -t get_outputs
-output DP-3 pos 0 768
-output DP-1 pos 1920 768 mode 1920x1080@143.981Hz
-output DP-2 pos 3840 768
-output HDMI-A-1 pos 4500 0
-# 4500 is approximate location of monitor
-
-# Assign Workspaces to outputs
-workspace 1 output DP-1
-workspace 2 output DP-3
-workspace 3 output DP-2
-workspace 4 output HDMI-A-1
-
-### Idle configuration
-#
-# Example configuration:
-#
-# exec swayidle -w \
-#          timeout 300 'swaylock -f -c 000000' \
-#          timeout 600 'swaymsg "output * dpms off"' resume 'swaymsg "output * dpms on"' \
-#          before-sleep 'swaylock -f -c 000000'
-#
-# This will lock your screen after 300 seconds of inactivity, then turn off
-# your displays after another 300 seconds, and turn your screens back on when
-# resumed. It will also lock your screen before your computer goes to sleep.
-
-### Input configuration
-#
-# Example configuration:
-#
-#   input "2:14:SynPS/2_Synaptics_TouchPad" {
-#       dwt enabled
-#       tap enabled
-#       natural_scroll enabled
-#       middle_emulation enabled
-#   }
-#
-# You can get the names of your inputs by running: swaymsg -t get_inputs
-# Read `man 5 sway-input` for more information about this section.
 
 ### Key bindings
 #
@@ -180,15 +115,9 @@ workspace 4 output HDMI-A-1
     bindsym $mod+Shift+8 move container to workspace number 8
     bindsym $mod+Shift+9 move container to workspace number 9
     bindsym $mod+Shift+0 move container to workspace number 10
-    # Note: workspaces can have any name you want, not just numbers.
-    # We just use 1-10 as the default.
 #
 # Layout stuff:
 #
-    # Switch the current container between different layout styles
-    bindsym $mod+Shift+y layout tiling
-    bindsym $mod+Shift+t workspace_layout default
-
     # Make the current focus fullscreen
     bindsym $mod+t fullscreen
 
@@ -198,8 +127,6 @@ workspace 4 output HDMI-A-1
     # Swap focus between the tiling area and the floating area
     bindsym $mod+space focus mode_toggle
 
-    # Move focus to the parent container
-    bindsym $mod+a focus parent
 #
 # Resizing containers:
 #
@@ -225,35 +152,18 @@ mode "resize" {
 }
 
 bindsym $mod+r mode "resize"
-# bindsym $mod+m move workspace to output right
 
 # Personal settings
 focus_follows_mouse no
 gaps inner 5
 default_border pixel 1
 
-exec_always /usr/bin/indicator-sound-switcher
 exec /usr/bin/dunst
 
 bar {
     swaybar_command waybar
 }
 
-# Color Settings
-# set $base00 #282828
-# set $base01 #504945
-# set $base03 #928374
-# set $base05 #8ec07c
-# set $base07 #fbf1c7
-# set $base08 #cc241d
-# set $base0D #98971a
-#
-# # class                 border  bground text    indicator child_border
-# client.focused          $base05 $base0D $base00 $base0D $base0D
-# client.focused_inactive $base01 $base01 $base05 $base03 $base01
-# client.unfocused        $base01 $base00 $base05 $base01 $base01
-# client.urgent           $base08 $base08 $base00 $base08 $base08
-# client.placeholder      $base00 $base00 $base05 $base00 $base00
-# client.background       $base07
-
+include ~/.config/sway/monitors
+include ~/.config/sway/wallpapers
 include /etc/sway/config.d/*
