--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -7,6 +7,9 @@ window:
   decorations: None
   opacity: 0.8
 
+env:
+  TERM: xterm-256color
+
 key_bindings:
   - { key: V,        mods: Alt,     action: Paste            } # Alt+V      Paste
   - { key: C,        mods: Alt,     action: Copy             } # Alt+C      Copy
