--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -81,31 +81,31 @@ mods = "Alt"
 # Default colors
 [colors.primary]
 # hard contrast background = = '#1d2021'
-background = '#282828'
-# soft contrast background = = '#32302f'
-foreground = '#ebdbb2'
-
-# Normal colors
-[colors.normal]
-black   = '#282828'
-red     = '#cc241d'
-green   = '#98971a'
-yellow  = '#d79921'
-blue    = '#458588'
-magenta = '#b16286'
-cyan    = '#689d6a'
-white   = '#a89984'
-
-# Bright colors
-[colors.bright]
-black   = '#928374'
-red     = '#fb4934'
-green   = '#b8bb26'
-yellow  = '#fabd2f'
-blue    = '#83a598'
-magenta = '#d3869b'
-cyan    = '#8ec07c'
-white   = '#ebdbb2'
+# background = '#282828'
+# # soft contrast background = = '#32302f'
+# foreground = '#ebdbb2'
+#
+# # Normal colors
+# [colors.normal]
+# black   = '#282828'
+# red     = '#cc241d'
+# green   = '#98971a'
+# yellow  = '#d79921'
+# blue    = '#458588'
+# magenta = '#b16286'
+# cyan    = '#689d6a'
+# white   = '#a89984'
+#
+# # Bright colors
+# [colors.bright]
+# black   = '#928374'
+# red     = '#fb4934'
+# green   = '#b8bb26'
+# yellow  = '#fabd2f'
+# blue    = '#83a598'
+# magenta = '#d3869b'
+# cyan    = '#8ec07c'
+# white   = '#ebdbb2'
 
 [mouse]
 hide_when_typing = true
@@ -119,7 +119,7 @@ program = "/bin/zsh"
 [window]
 decorations = "None"
 dynamic_padding = true
-opacity = 0.8
+opacity = 0.9
 
 [window.padding]
 x = 32
