--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -1,3 +1,4 @@
+[general]
 live_config_reload = true
 
 [bell]
@@ -111,7 +112,7 @@ hide_when_typing = true
 [scrolling]
 history = 1000
 
-[shell]
+[terminal.shell]
 program = "/bin/zsh"
 
 [window]
